[package]
name = "rust-vuln-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }   # Async runtime
reqwest = { version = "0.11", features = ["json"] }  # HTTP requests
serde = { version = "1", features = ["derive"] }  # JSON parsing
serde_json = "1"  # JSON handling
clap = { version = "4", features = ["derive"] }  # CLI arguments
pnet = "0.34"